:sparkles: Use GLFW gamepad instead of joystick.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -4,6 +4,9 @@
   "lambdacontrols.menu.dead_zone": "Dead zone",
   "lambdacontrols.menu.hud_side": "HUD side",
   "lambdacontrols.menu.rotation_speed": "Rotation speed",
+  "lambdacontrols.menu.mouse_speed": "Mouse speed",
+  "lambdacontrols.controller.connected": "Controller %d connected.",
+  "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
   "lambdacontrols.controls_mode.default": "Keyboard/Mouse",
   "lambdacontrols.controls_mode.controller": "Controller",
   "lambdacontrols.controls_mode.touchscreen": "Touchscreen",
