:sparkles: Add HUD and other improvements.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -1,20 +1,44 @@
 {
+  "lambdacontrols.action.attack": "Attack",
+  "lambdacontrols.action.back": "Back",
+  "lambdacontrols.action.drop_item": "Drop item",
+  "lambdacontrols.action.exit": "Exit",
+  "lambdacontrols.action.forward": "Forward",
+  "lambdacontrols.action.hit": "Hit",
+  "lambdacontrols.action.inventory": "Inventory",
+  "lambdacontrols.action.jump": "Jump",
+  "lambdacontrols.action.pickup": "Pickup",
+  "lambdacontrols.action.pickup_all": "Pickup all",
+  "lambdacontrols.action.quick_move": "Quick move",
+  "lambdacontrols.action.sneak": "Sneak",
+  "lambdacontrols.action.sprint": "Sprint",
+  "lambdacontrols.action.swap_hands": "Swap hands",
+  "lambdacontrols.action.use": "Use",
   "lambdacontrols.controller.connected": "Controller %d connected.",
   "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
   "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use SDL2 Gamepad Tool",
   "lambdacontrols.controller.mappings.2": "(http://generalarcade.com/gamepadtool/),",
   "lambdacontrols.controller.mappings.3": "and put the mapping in `config/gamecontrollerdb.txt`.",
+  "lambdacontrols.controller_type.default": "default",
+  "lambdacontrols.controller_type.playstation": "PlayStation",
+  "lambdacontrols.controller_type.switch": "Switch",
+  "lambdacontrols.controller_type.xbox": "Xbox",
+  "lambdacontrols.controller_type.steam": "Steam",
+  "lambdacontrols.controller_type.ouya": "OUYA",
   "lambdacontrols.controls_mode.default": "Keyboard/Mouse",
   "lambdacontrols.controls_mode.controller": "Controller",
   "lambdacontrols.controls_mode.touchscreen": "Touchscreen",
   "lambdacontrols.hud_side.left": "left",
   "lambdacontrols.hud_side.right": "right",
   "lambdacontrols.menu.controller": "Controller",
+  "lambdacontrols.menu.controller_type": "Controller type",
   "lambdacontrols.menu.controls_mode": "Controls mode",
   "lambdacontrols.menu.dead_zone": "Dead zone",
+  "lambdacontrols.menu.hud_enable": "Enable HUD",
   "lambdacontrols.menu.hud_side": "HUD side",
   "lambdacontrols.menu.invert_right_x_axis": "Invert right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert right Y",
   "lambdacontrols.menu.mouse_speed": "Mouse speed",
-  "lambdacontrols.menu.rotation_speed": "Rotation speed"
+  "lambdacontrols.menu.rotation_speed": "Rotation speed",
+  "lambdacontrols.menu.title": "LambdaControls - Settings"
 }
