:sparkles: Add better button management, the controls screen and more.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -1,26 +1,61 @@
 {
   "lambdacontrols.action.attack": "Attack",
   "lambdacontrols.action.back": "Back",
-  "lambdacontrols.action.drop_item": "Drop item",
+  "lambdacontrols.action.chat": "Open Chat",
+  "lambdacontrols.action.drop_item": "Drop Item",
   "lambdacontrols.action.exit": "Exit",
   "lambdacontrols.action.forward": "Forward",
   "lambdacontrols.action.hit": "Hit",
   "lambdacontrols.action.inventory": "Inventory",
   "lambdacontrols.action.jump": "Jump",
+  "lambdacontrols.action.left": "Left",
+  "lambdacontrols.action.pause_game": "Pause Game",
+  "lambdacontrols.action.pick_block": "Pick Block",
   "lambdacontrols.action.pickup": "Pickup",
   "lambdacontrols.action.pickup_all": "Pickup all",
+  "lambdacontrols.action.player_list": "Player List",
   "lambdacontrols.action.quick_move": "Quick move",
+  "lambdacontrols.action.right": "Right",
+  "lambdacontrols.action.screenshot": "Take Screenshot",
   "lambdacontrols.action.sneak": "Sneak",
   "lambdacontrols.action.sprint": "Sprint",
-  "lambdacontrols.action.swap_hands": "Swap hands",
+  "lambdacontrols.action.swap_hands": "Swap Hands",
+  "lambdacontrols.action.toggle_perspective": "Toggle Perspective",
+  "lambdacontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
   "lambdacontrols.action.use": "Use",
+  "lambdacontrols.button.a": "A",
+  "lambdacontrols.button.b": "B",
+  "lambdacontrols.button.x": "X",
+  "lambdacontrols.button.y": "Y",
+  "lambdacontrols.button.left_bumper": "Left bumper",
+  "lambdacontrols.button.right_bumper": "Right bumper",
+  "lambdacontrols.button.back": "Back",
+  "lambdacontrols.button.start": "Start",
+  "lambdacontrols.button.guide": "Guide",
+  "lambdacontrols.button.left_thumb": "Left thumb",
+  "lambdacontrols.button.right_thumb": "Right thumb",
+  "lambdacontrols.button.dpad_up": "DPAD up",
+  "lambdacontrols.button.dpad_right": "DPAD right",
+  "lambdacontrols.button.dpad_down": "DPAD down",
+  "lambdacontrols.button.dpad_left": "DPAD left",
+  "lambdacontrols.axis.left_x+": "Left X+",
+  "lambdacontrols.axis.left_y+": "Left Y+",
+  "lambdacontrols.axis.right_x+": "Right X+",
+  "lambdacontrols.axis.right_y+": "Right Y+",
+  "lambdacontrols.axis.left_trigger": "Left trigger",
+  "lambdacontrols.axis.right_trigger": "Right trigger",
+  "lambdacontrols.axis.left_x-": "Left X-",
+  "lambdacontrols.axis.left_y-": "Left Y-",
+  "lambdacontrols.axis.right_x-": "Right X-",
+  "lambdacontrols.axis.right_y-": "Right Y-",
+  "lambdacontrols.button.unknown": "Unknown (%d)",
   "lambdacontrols.controller.connected": "Controller %d connected.",
   "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
-  "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use SDL2 Gamepad Tool",
-  "lambdacontrols.controller.mappings.2": "(http://generalarcade.com/gamepadtool/),",
-  "lambdacontrols.controller.mappings.3": "and put the mapping in `config/gamecontrollerdb.txt`.",
+  "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use %sSDL2 Gamepad Tool%s",
+  "lambdacontrols.controller.mappings.2": "(%shttp://generalarcade.com/gamepadtool/%s),",
+  "lambdacontrols.controller.mappings.3": "and put the mapping in `%sconfig/gamecontrollerdb.txt%s`.",
   "lambdacontrols.controller_type.default": "default",
-  "lambdacontrols.controller_type.playstation": "PlayStation",
+  "lambdacontrols.controller_type.dualshock": "DualShock",
   "lambdacontrols.controller_type.switch": "Switch",
   "lambdacontrols.controller_type.xbox": "Xbox",
   "lambdacontrols.controller_type.steam": "Steam",
@@ -40,5 +75,6 @@
   "lambdacontrols.menu.invert_right_y_axis": "Invert right Y",
   "lambdacontrols.menu.mouse_speed": "Mouse speed",
   "lambdacontrols.menu.rotation_speed": "Rotation speed",
-  "lambdacontrols.menu.title": "LambdaControls - Settings"
+  "lambdacontrols.menu.title": "LambdaControls - Settings",
+  "lambdacontrols.menu.title.controller_controls": "Controller controls"
 }
