:sparkles: Add clickable link, more options, and fixes!

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -52,8 +52,9 @@
   "lambdacontrols.controller.connected": "Controller %d connected.",
   "lambdacontrols.controller.disconnected": "Controller %d disconnected.",
   "lambdacontrols.controller.mappings.1": "To configure the controller mappings, please use %sSDL2 Gamepad Tool%s",
-  "lambdacontrols.controller.mappings.2": "(%shttp://generalarcade.com/gamepadtool/%s),",
-  "lambdacontrols.controller.mappings.3": "and put the mapping in `%sconfig/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.2": "(%s%s%s),",
+  "lambdacontrols.controller.mappings.3": "and put the mapping in `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.updated": "Updated mappings!",
   "lambdacontrols.controller_type.default": "default",
   "lambdacontrols.controller_type.dualshock": "DualShock",
   "lambdacontrols.controller_type.switch": "Switch",
@@ -65,15 +66,17 @@
   "lambdacontrols.controls_mode.touchscreen": "Touchscreen",
   "lambdacontrols.hud_side.left": "left",
   "lambdacontrols.hud_side.right": "right",
+  "lambdacontrols.menu.auto_switch_mode": "Auto switch mode",
   "lambdacontrols.menu.controller": "Controller",
   "lambdacontrols.menu.controller_type": "Controller type",
-  "lambdacontrols.menu.controls_mode": "Controls mode",
+  "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Dead zone",
   "lambdacontrols.menu.hud_enable": "Enable HUD",
   "lambdacontrols.menu.hud_side": "HUD side",
   "lambdacontrols.menu.invert_right_x_axis": "Invert right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert right Y",
   "lambdacontrols.menu.mouse_speed": "Mouse speed",
+  "lambdacontrols.menu.reload_controller_mappings": "Reload controller mappings",
   "lambdacontrols.menu.rotation_speed": "Rotation speed",
   "lambdacontrols.menu.title": "LambdaControls - Settings",
   "lambdacontrols.menu.title.controller_controls": "Controller controls"
