--- a/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -52,8 +52,9 @@
   "lambdacontrols.controller.connected": "Manette %d connecté.",
   "lambdacontrols.controller.disconnected": "Manette %d déconnecté.",
   "lambdacontrols.controller.mappings.1": "Pour configurer les correspondances de la manette, veuillez utiliser %sSDL2 Gamepad Tool%s",
-  "lambdacontrols.controller.mappings.2": "(%shttp://generalarcade.com/gamepadtool/%s),",
-  "lambdacontrols.controller.mappings.3": "et mettez les correspondances dans le fichier `%sconfig/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.2": "(%s%s%s),",
+  "lambdacontrols.controller.mappings.3": "et mettez les correspondances dans le fichier `%s.minecraft/config/gamecontrollerdb.txt%s`.",
+  "lambdacontrols.controller.mappings.updated": "Configuration des manettes mise à jour!",
   "lambdacontrols.controller_type.default": "default",
   "lambdacontrols.controller_type.dualshock": "DualShock",
   "lambdacontrols.controller_type.switch": "Switch",
@@ -65,15 +66,17 @@
   "lambdacontrols.controls_mode.touchscreen": "Tactile",
   "lambdacontrols.hud_side.left": "gauche",
   "lambdacontrols.hud_side.right": "droit",
+  "lambdacontrols.menu.auto_switch_mode": "Changement auto de mode",
   "lambdacontrols.menu.controller": "Manette",
   "lambdacontrols.menu.controller_type": "Type de manette",
-  "lambdacontrols.menu.controls_mode": "Mode de contrôle",
+  "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Zone morte",
   "lambdacontrols.menu.hud_enable": "Activer le HUD",
   "lambdacontrols.menu.hud_side": "Côté du HUD",
   "lambdacontrols.menu.invert_right_x_axis": "Inverser le joystick droit (X)",
   "lambdacontrols.menu.invert_right_y_axis": "Inverser le joystick droit (Y)",
   "lambdacontrols.menu.mouse_speed": "Vitesse de la souris",
+  "lambdacontrols.menu.reload_controller_mappings": "Recharge la configuration des manettes",
   "lambdacontrols.menu.rotation_speed": "Vitesse de rotation",
   "lambdacontrols.menu.title": "LambdaControls - Paramètres",
   "lambdacontrols.menu.title.controller_controls": "Contrôles de la manette"
