:construction: WIP of chording and next release.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -10,6 +10,8 @@
   "lambdacontrols.action.exit": "Exit",
   "lambdacontrols.action.forward": "Forward",
   "lambdacontrols.action.hit": "Hit",
+  "lambdacontrols.action.hotbar_left": "Hotbar left",
+  "lambdacontrols.action.hotbar_right": "Hotbar right",
   "lambdacontrols.action.inventory": "Inventory",
   "lambdacontrols.action.jump": "Jump",
   "lambdacontrols.action.left": "Left",
@@ -72,6 +74,7 @@
   "lambdacontrols.hud_side.right": "right",
   "lambdacontrols.menu.auto_switch_mode": "Auto switch mode",
   "lambdacontrols.menu.controller": "Controller",
+  "lambdacontrols.menu.controller2": "Second controller",
   "lambdacontrols.menu.controller_type": "Controller type",
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Dead zone",
@@ -79,9 +82,23 @@
   "lambdacontrols.menu.hud_side": "HUD side",
   "lambdacontrols.menu.invert_right_x_axis": "Invert right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert right Y",
+  "lambdacontrols.menu.keyboard_controls": "Keyboard controls...",
   "lambdacontrols.menu.mouse_speed": "Mouse speed",
   "lambdacontrols.menu.reload_controller_mappings": "Reload controller mappings",
   "lambdacontrols.menu.rotation_speed": "Rotation speed",
   "lambdacontrols.menu.title": "LambdaControls - Settings",
-  "lambdacontrols.menu.title.controller_controls": "Controller controls"
+  "lambdacontrols.menu.title.controller": "Controller options",
+  "lambdacontrols.menu.title.controller_controls": "Controller controls",
+  "lambdacontrols.menu.title.general": "General options",
+  "lambdacontrols.menu.title.hud": "HUD options",
+  "lambdacontrols.tooltip.auto_switch_mode": "Sets whether the controls mode should be switched automatically to Controller if a controller is connected.",
+  "lambdacontrols.tooltip.controller2": "Defines a second controller to use, which allow Joy-Cons support for example.",
+  "lambdacontrols.tooltip.controller_type": "Changes the controller type to displays the correct buttons.",
+  "lambdacontrols.tooltip.controls_mode": "Changes the controls mode.",
+  "lambdacontrols.tooltip.dead_zone": "Sets the dead zone of the controller's axises.",
+  "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
+  "lambdacontrols.tooltip.hud_side": "Changes the position of the HUD.",
+  "lambdacontrols.tooltip.mouse_speed": "Changes the emulated mouse speed with a controller.",
+  "lambdacontrols.tooltip.rotation_speed": "Changes the camera rotation speed in controller mode.",
+  "lambdacontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file."
 }
