--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -29,6 +29,7 @@
   "lambdacontrols.action.toggle_perspective": "Toggle Perspective",
   "lambdacontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
   "lambdacontrols.action.use": "Use",
+  "lambdacontrols.action.zoom": "Zoom",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
