:sparkles: Add chording and new button assignment system.

--- a/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -92,6 +92,9 @@
   "lambdacontrols.menu.title.controller_controls": "Controller controls",
   "lambdacontrols.menu.title.general": "General options",
   "lambdacontrols.menu.title.hud": "HUD options",
+  "lambdacontrols.menu.unbound": "Unbound",
+  "lambdacontrols.narrator.unbound": "Unbound %s",
+  "lambdacontrols.not_bound": "Not bound",
   "lambdacontrols.tooltip.auto_switch_mode": "Sets whether the controls mode should be switched automatically to Controller if a controller is connected.",
   "lambdacontrols.tooltip.controller2": "Defines a second controller to use, which allow Joy-Cons support for example.",
   "lambdacontrols.tooltip.controller_type": "Changes the controller type to displays the correct buttons.",
