--- a/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -92,6 +92,9 @@
   "lambdacontrols.menu.title.controller_controls": "Contrôles de la manette",
   "lambdacontrols.menu.title.general": "Options générales",
   "lambdacontrols.menu.title.hud": "Options du HUD",
+  "lambdacontrols.menu.unbound": "Délier",
+  "lambdacontrols.narrator.unbound": "Délier %s",
+  "lambdacontrols.not_bound": "Non défini",
   "lambdacontrols.tooltip.auto_switch_mode": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
   "lambdacontrols.tooltip.controller2": "Défini une deuxième manette, utile dans le cas d'utilisation de Joy-Cons.",
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
