:sparkles: Add fly drifting option.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -79,6 +79,7 @@
   "lambdacontrols.menu.controller_type": "Controller Type",
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Dead Zone",
+  "lambdacontrols.menu.fly_drifting": "Fly Drifting",
   "lambdacontrols.menu.front_block_placing": "Front Block Placing",
   "lambdacontrols.menu.hud_enable": "Enable HUD",
   "lambdacontrols.menu.hud_side": "HUD Side",
@@ -102,7 +103,8 @@
   "lambdacontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
   "lambdacontrols.tooltip.controls_mode": "The controls mode.",
   "lambdacontrols.tooltip.dead_zone": "The dead zone for the controller's analogue sticks.",
-  "lambdacontrols.tooltip.front_block_placing": "Enable front block placing, §cmight be considered cheating on some servers§r.",
+  "lambdacontrols.tooltip.fly_drifting": "While flying, enables drifting/inertia.",
+  "lambdacontrols.tooltip.front_block_placing": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
   "lambdacontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
