--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -79,6 +79,7 @@
   "lambdacontrols.menu.controller_type": "Type de manette",
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Zone morte",
+  "lambdacontrols.menu.fly_drifting": "Inertie de vol",
   "lambdacontrols.menu.front_block_placing": "Placement avant de bloc",
   "lambdacontrols.menu.hud_enable": "Activer le HUD",
   "lambdacontrols.menu.hud_side": "Côté du HUD",
@@ -91,6 +92,7 @@
   "lambdacontrols.menu.title": "LambdaControls - Paramètres",
   "lambdacontrols.menu.title.controller": "Options de manettes",
   "lambdacontrols.menu.title.controller_controls": "Contrôles de la manette",
+  "lambdacontrols.menu.title.gameplay": "Options de Gameplay",
   "lambdacontrols.menu.title.general": "Options générales",
   "lambdacontrols.menu.title.hud": "Options du HUD",
   "lambdacontrols.menu.unbound": "Délier",
@@ -101,6 +103,7 @@
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
   "lambdacontrols.tooltip.controls_mode": "Change le mode de contrôle.",
   "lambdacontrols.tooltip.dead_zone": "Zone morte des axes de la manette.",
+  "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement.",
   "lambdacontrols.tooltip.front_block_placing": "Active le placement avant de blocs, §cpeut être considérer comme de la trice sur certains serveurs§r.",
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
