--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -96,6 +96,7 @@
   "lambdacontrols.menu.title.general": "Options générales",
   "lambdacontrols.menu.title.hud": "Options du HUD",
   "lambdacontrols.menu.unbound": "Délier",
+  "lambdacontrols.menu.unfocused_input": "Entrée en fond",
   "lambdacontrols.narrator.unbound": "Délier %s",
   "lambdacontrols.not_bound": "Non défini",
   "lambdacontrols.tooltip.auto_switch_mode": "Détermine si le mode de contrôle doit automatiquement changer sur Manette si une manette est connectée et inversement.",
@@ -109,5 +110,6 @@
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
   "lambdacontrols.tooltip.mouse_speed": "Change la vitesse de la souris émulée par la manette.",
   "lambdacontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra.",
-  "lambdacontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes."
+  "lambdacontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes.",
+  "lambdacontrols.tooltip.unfocused_input": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée."
 }
