:bookmark: LambdaControls v1.1.0: Chording update.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -80,6 +80,7 @@
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Dead Zone",
   "lambdacontrols.menu.fly_drifting": "Fly Drifting",
+  "lambdacontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
   "lambdacontrols.menu.front_block_placing": "Front Block Placing",
   "lambdacontrols.menu.hud_enable": "Enable HUD",
   "lambdacontrols.menu.hud_side": "HUD Side",
@@ -105,6 +106,7 @@
   "lambdacontrols.tooltip.controls_mode": "The controls mode.",
   "lambdacontrols.tooltip.dead_zone": "The dead zone for the controller's analogue sticks.",
   "lambdacontrols.tooltip.fly_drifting": "While flying, enables drifting/inertia.",
+  "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables vertical drifting/intertia.",
   "lambdacontrols.tooltip.front_block_placing": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
