--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -80,6 +80,7 @@
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Zone morte",
   "lambdacontrols.menu.fly_drifting": "Inertie de vol",
+  "lambdacontrols.menu.fly_drifting_vertical": "Inertie verticale de vol",
   "lambdacontrols.menu.front_block_placing": "Placement avant de bloc",
   "lambdacontrols.menu.hud_enable": "Activer le HUD",
   "lambdacontrols.menu.hud_side": "Côté du HUD",
@@ -105,6 +106,7 @@
   "lambdacontrols.tooltip.controls_mode": "Change le mode de contrôle.",
   "lambdacontrols.tooltip.dead_zone": "Zone morte des axes de la manette.",
   "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement.",
+  "lambdacontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical.",
   "lambdacontrols.tooltip.front_block_placing": "Active le placement avant de blocs, §cpeut être considérer comme de la trice sur certains serveurs§r.",
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
