:sparkles: Add precision to some tooltips and prepare for the fast/accurate block placement feature.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -105,8 +105,8 @@
   "lambdacontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
   "lambdacontrols.tooltip.controls_mode": "The controls mode.",
   "lambdacontrols.tooltip.dead_zone": "The dead zone for the controller's analogue sticks.",
-  "lambdacontrols.tooltip.fly_drifting": "While flying, enables drifting/inertia.",
-  "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables vertical drifting/intertia.",
+  "lambdacontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
+  "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "lambdacontrols.tooltip.front_block_placing": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
