--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_ca.json
@@ -105,8 +105,8 @@
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
   "lambdacontrols.tooltip.controls_mode": "Change le mode de contrôle.",
   "lambdacontrols.tooltip.dead_zone": "Zone morte des axes de la manette.",
-  "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement.",
-  "lambdacontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical.",
+  "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement Vanilla.",
+  "lambdacontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical Vanilla.",
   "lambdacontrols.tooltip.front_block_placing": "Active le placement avant de blocs, §cpeut être considérer comme de la trice sur certains serveurs§r.",
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
