--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -80,6 +80,7 @@
   "lambdacontrols.menu.controller_type": "Controller Type",
   "lambdacontrols.menu.controls_mode": "Mode",
   "lambdacontrols.menu.dead_zone": "Dead Zone",
+  "lambdacontrols.menu.fast_block_placing": "Fast Block Placing",
   "lambdacontrols.menu.fly_drifting": "Fly Drifting",
   "lambdacontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
   "lambdacontrols.menu.front_block_placing": "Front Block Placing",
@@ -106,6 +107,7 @@
   "lambdacontrols.tooltip.controller_type": "The controller type to display the correct buttons.",
   "lambdacontrols.tooltip.controls_mode": "The controls mode.",
   "lambdacontrols.tooltip.dead_zone": "The dead zone for the controller's analogue sticks.",
+  "lambdacontrols.tooltip.fast_block_placing": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
   "lambdacontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "lambdacontrols.tooltip.front_block_placing": "Enables front block placing, §cmight be considered cheating on some servers§r.",
