:bookmark: LambdaControls v1.3.2: Fix things, add vertical reacharound and internal API.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -82,13 +82,14 @@
   "lambdacontrols.menu.fast_block_placing": "Fast Block Placing",
   "lambdacontrols.menu.fly_drifting": "Fly Drifting",
   "lambdacontrols.menu.fly_drifting_vertical": "Vertical Fly Drifting",
-  "lambdacontrols.menu.front_block_placing": "Front Block Placing",
   "lambdacontrols.menu.hud_enable": "Enable HUD",
   "lambdacontrols.menu.hud_side": "HUD Side",
   "lambdacontrols.menu.invert_right_x_axis": "Invert Right X",
   "lambdacontrols.menu.invert_right_y_axis": "Invert Right Y",
   "lambdacontrols.menu.keyboard_controls": "Keyboard Controls...",
   "lambdacontrols.menu.mouse_speed": "Mouse Speed",
+  "lambdacontrols.menu.reacharound.horizontal": "Front Block Placing",
+  "lambdacontrols.menu.reacharound.vertical": "Vertical Reacharound",
   "lambdacontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
   "lambdacontrols.menu.rotation_speed": "Rotation Speed",
   "lambdacontrols.menu.title": "LambdaControls - Settings",
@@ -111,12 +112,13 @@
   "lambdacontrols.tooltip.fast_block_placing": "While flying in creative mode, enables fast block placing depending on your speed. §cOn some servers this might be considered as cheating.",
   "lambdacontrols.tooltip.fly_drifting": "While flying, enables Vanilla drifting/inertia.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
-  "lambdacontrols.tooltip.front_block_placing": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "lambdacontrols.tooltip.hud_side": "The position of the HUD.",
   "lambdacontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
-  "lambdacontrols.tooltip.rotation_speed": "The camera rotation speed in controller mode.",
+  "lambdacontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
+  "lambdacontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "lambdacontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
+  "lambdacontrols.tooltip.rotation_speed": "The camera rotation speed in controller mode.",
   "lambdacontrols.tooltip.unfocused_input": "Allow controller input when the window is not focused.",
   "lambdacontrols.tooltip.virtual_mouse": "Enable the virtual mouse which is handful in the case of a splitscreen.",
   "lambdacontrols.virtual_mouse.skin.default_light": "Default Light",
