--- a/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/fr_fr.json
@@ -81,13 +81,14 @@
   "lambdacontrols.menu.dead_zone": "Zone morte",
   "lambdacontrols.menu.fly_drifting": "Inertie de vol",
   "lambdacontrols.menu.fly_drifting_vertical": "Inertie verticale de vol",
-  "lambdacontrols.menu.front_block_placing": "Placement avant de bloc",
   "lambdacontrols.menu.hud_enable": "Activer le HUD",
   "lambdacontrols.menu.hud_side": "Côté du HUD",
   "lambdacontrols.menu.invert_right_x_axis": "Inverser le stick droit (X)",
   "lambdacontrols.menu.invert_right_y_axis": "Inverser le stick droit (Y)",
   "lambdacontrols.menu.keyboard_controls": "Contrôles clavier...",
   "lambdacontrols.menu.mouse_speed": "Vitesse de la souris",
+  "lambdacontrols.menu.reacharound.horizontal": "Placement avant de bloc",
+  "lambdacontrols.menu.reacharound.vertical": "Placement vertical",
   "lambdacontrols.menu.reload_controller_mappings": "Recharge la configuration des manettes",
   "lambdacontrols.menu.rotation_speed": "Vitesse de rotation",
   "lambdacontrols.menu.title": "LambdaControls - Paramètres",
@@ -107,14 +108,16 @@
   "lambdacontrols.tooltip.controller_type": "Le type de contrôle n'influe que sur les boutons affichés.",
   "lambdacontrols.tooltip.controls_mode": "Change le mode de contrôle.",
   "lambdacontrols.tooltip.dead_zone": "Zone morte des axes de la manette.",
+  "lambdacontrols.tooltip.fast_block_placing": "Active le placement rapide de blocs en vol.",
   "lambdacontrols.tooltip.fly_drifting": "Pendant que le joueur vole, active le glissement Vanilla.",
   "lambdacontrols.tooltip.fly_drifting_vertical": "Pendant que le joueur vole, active le glissement vertical Vanilla.",
-  "lambdacontrols.tooltip.front_block_placing": "Active le placement avant de blocs, §cpeut être considérer comme de la trice sur certains serveurs§r.",
   "lambdacontrols.tooltip.hud_enable": "Détermine si l'indicateur des buttons de la manette doit être affiché ou non.",
   "lambdacontrols.tooltip.hud_side": "Change la position du HUD.",
   "lambdacontrols.tooltip.mouse_speed": "Change la vitesse de la souris émulée par la manette.",
-  "lambdacontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra.",
+  "lambdacontrols.tooltip.reacharound.horizontal": "Active le placement avant de blocs, §cpeut être considérer comme de la triche sur certains serveurs§r.",
+  "lambdacontrols.tooltip.reacharound.vertical": "Active le placement vertical de blocs, c'est-à-dire de blocs en dessous du bloc sur lequel vous êtes placé, §cpeut être considérer comme de la triche sur certains serveurs§r.",
   "lambdacontrols.tooltip.reload_controller_mappings": "Recharge le fichier de configuration des manettes.",
+  "lambdacontrols.tooltip.rotation_speed": "Change la vitesse de rotation de la caméra.",
   "lambdacontrols.tooltip.unfocused_input": "Autorise les entrées manette quand la fenêtre n'est pas sélectionnée.",
   "lambdacontrols.tooltip.virtual_mouse": "Active la souris virtuelle qui est pratique dans le cas d'un écran partagé.",
   "lambdacontrols.virtual_mouse.skin.default_light": "défaut clair",
