:bookmark: LambdaControls v1.4.0: Analog movements, 1.16.2 compat, better API, etc.

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/en_us.json
@@ -31,6 +31,9 @@
   "lambdacontrols.action.toggle_smooth_camera": "Toggle Cinematic Camera",
   "lambdacontrols.action.use": "Use",
   "lambdacontrols.action.zoom": "Zoom",
+  "lambdacontrols.action.zoom.in": "Increase Zoom",
+  "lambdacontrols.action.zoom.out": "Decrease Zoom",
+  "lambdacontrols.action.zoom.reset": "Reset Zoom",
   "lambdacontrols.button.a": "A",
   "lambdacontrols.button.b": "B",
   "lambdacontrols.button.x": "X",
@@ -98,7 +101,6 @@
   "lambdacontrols.menu.title.gameplay": "Gameplay Options",
   "lambdacontrols.menu.title.general": "General Options",
   "lambdacontrols.menu.title.hud": "HUD Options",
-  "lambdacontrols.menu.unbound": "Unbound",
   "lambdacontrols.menu.unfocused_input": "Unfocused Input",
   "lambdacontrols.menu.virtual_mouse": "Virtual Mouse",
   "lambdacontrols.menu.virtual_mouse.skin": "Virtual Mouse Skin",
