fix: use of words

--- a/fabric/src/main/resources/assets/lambdacontrols/lang/es_mx.json
+++ b/fabric/src/main/resources/assets/lambdacontrols/lang/es_mx.json
@@ -103,7 +103,7 @@
   "lambdacontrols.menu.title.hud": "Opciones de HUD",
   "lambdacontrols.menu.unfocused_input": "Entrada desenfocada",
   "lambdacontrols.menu.virtual_mouse": "Ratón virtual",
-  "lambdacontrols.menu.virtual_mouse.skin": "Skin de ratón virtual",
+  "lambdacontrols.menu.virtual_mouse.skin": "Piel de ratón virtual",
   "lambdacontrols.narrator.unbound": "Resetear %s",
   "lambdacontrols.not_bound": "No ligado",
   "lambdacontrols.tooltip.auto_switch_mode": "Si el modo de controles debe cambiarse a Controlador automáticamente si hay uno conectado.",
@@ -122,7 +122,7 @@
   "lambdacontrols.tooltip.reload_controller_mappings": "Vuelve a cargar el archivo de asignaciones del controlador.",
   "lambdacontrols.tooltip.rotation_speed": "La velocidad de rotación de la cámara en modo controlador.",
   "lambdacontrols.tooltip.unfocused_input": "Habilita entrada del controlador cuando la ventana no está enfocada.",
-  "lambdacontrols.tooltip.virtual_mouse": "Habilite el mouse virtual que es útil en el caso de una pantalla dividida.",
+  "lambdacontrols.tooltip.virtual_mouse": "Habilite el ratón virtual que es útil en el caso de una pantalla dividida.",
   "lambdacontrols.virtual_mouse.skin.default_light": "Ligera por defecto",
   "lambdacontrols.virtual_mouse.skin.default_dark": "Oscura por defecto",
   "lambdacontrols.virtual_mouse.skin.second_light": "Ligera segundario",
